# AIProtoDSL

./: Cargo.toml  README.md  grammar.pest
.cursor/rules/: dsl-lint.mdc
assets/: cat_034_048_dump.txt
assets/failing_payload/: README.md  cat034_block_hex.txt  cat034_block_xxd.txt  our_decoder_frame3_cat034.txt  tshark_asterix_frame3.txt  udp_payload_hex.txt  udp_payload_xxd.txt
assets/failing_payload_048/: field_comparison_report.txt  full_dump.txt  our_dump_frame1_cat048.txt  our_dump_frame2_cat048.txt  our_dump_frame3_cat048.txt  our_dump_frame5_cat048.txt  tshark_asterix_frame1.txt  tshark_asterix_frame2.txt  tshark_asterix_frame5.txt
benches/: walk_pcap.rs
docs/: asterix_034_decoding_failure_analysis.md  asterix_048_decoding_failure_analysis.md  asterix_cat048_errors_vs_wireshark_analysis.md  asterix_cat048_frn_fspec_analysis.md  asterix_cat048_tshark_comparison.md  asterix_eurocontrol_references.md  asterix_i048_130_standard_verification.md  cat034_frame17_wireshark_side_by_side.md  cat_034_048_analysis.md  decode_bottleneck_analysis.md  walk_saturating_range_throughput_analysis.md
examples/: asterix_family.dsl
fuzz/: Cargo.toml
fuzz/corpus/parser_fuzz/: minimal_message  with_transport
fuzz/fuzz_targets/: parser_fuzz.rs
scripts/: add_full_range_comments.py  compare_cat048_fields.sh  compare_cat048_frame1.sh  compare_dump_offsets.sh  compare_wireshark.sh  isolate_failing_payload.sh  isolate_failing_payload_048.sh
src/: ast.rs  codec.rs  dump.rs  frame.rs  grammar.pest  gui.rs  lib.rs  lint.rs  parser.rs  value.rs  walk.rs
tests/: bitmap_presence.rs  dsl.rs  integration.rs
