[package]
name = "aiprotodsl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aiprotodsl = { path = ".." }

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false
doc = false
